@pipeline add run, runner, model

--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -5,239 +5,15 @@
    "metadata": {},
    "source": [
     "# Overviw\n",
-    "- 特徴量抽出の部分の実装"
+    "- sand-pit"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Params"
+    "# Import everything I need:)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_train = './../data/input/train.csv'\n",
-    "path_test = './../data/input/test.csv'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# My func"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import argparse\n",
-    "import inspect\n",
-    "\n",
-    "def get_arguments():\n",
-    "    parser = argparse.ArgumentParser()\n",
-    "    parser.add_argument('--force', '-f', action='store_true', help='Overwrite existing files')\n",
-    "    return parser.parse_args()\n",
-    "\n",
-    "\n",
-    "def get_features(namespace):\n",
-    "    for k, v in namespace.items():\n",
-    "        if inspect.isclass(v) and issubclass(v, Feature) and not inspect.isabstract(v):\n",
-    "            yield v()\n",
-    "\n",
-    "\n",
-    "def generate_features(namespace, overwrite):\n",
-    "    for f in get_features(namespace):\n",
-    "        if f.train_path.exists() and f.test_path.exists() and not overwrite:\n",
-    "            print(f.name, 'was skipped')\n",
-    "        else:\n",
-    "            f.run().save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import time\n",
-    "from abc import ABCMeta, abstractmethod\n",
-    "from pathlib import Path\n",
-    "from contextlib import contextmanager\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "@contextmanager\n",
-    "def timer(name):\n",
-    "    t0 = time.time()\n",
-    "    print(f'[{name}] start')\n",
-    "    yield\n",
-    "    print(f'[{name}] done in {time.time() - t0:.0f} s')\n",
-    "\n",
-    "\n",
-    "class Feature(metaclass=ABCMeta):\n",
-    "    prefix = ''\n",
-    "    suffix = ''\n",
-    "    dir = '.'\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        self.name = self.__class__.__name__\n",
-    "        self.train = pd.DataFrame()\n",
-    "        self.test = pd.DataFrame()\n",
-    "        self.train_path = Path(self.dir) / f'{self.name}_train.ftr'\n",
-    "        self.test_path = Path(self.dir) / f'{self.name}_test.ftr'\n",
-    "    \n",
-    "    def run(self):\n",
-    "        with timer(self.name):\n",
-    "            self.create_features()\n",
-    "            prefix = self.prefix + '_' if self.prefix else ''\n",
-    "            suffix = '_' + self.suffix if self.suffix else ''\n",
-    "            self.train.columns = prefix + self.train.columns + suffix\n",
-    "            self.test.columns = prefix + self.test.columns + suffix\n",
-    "        return self\n",
-    "    \n",
-    "    @abstractmethod\n",
-    "    def create_features(self):\n",
-    "        raise NotImplementedError\n",
-    "    \n",
-    "    def save(self):\n",
-    "        self.train.to_feather(str(self.train_path))\n",
-    "        self.test.to_feather(str(self.test_path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class FamilySize(Feature):\n",
-    "    def create_features(self):\n",
-    "        self.train['family_size'] = train['SibSp'] + train['Parch'] + 1\n",
-    "        self.test['family_size'] = test['SibSp'] + test['Parch'] + 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Feature.dir = 'features'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = pd.read_csv(path_train)\n",
-    "test = pd.read_csv(path_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_features(namespace):\n",
-    "    for k, v in namespace.items():\n",
-    "        if inspect.isclass(v) and issubclass(v, Feature) and not inspect.isabstract(v):\n",
-    "            yield v()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.FamilySize object at 0x7f4dfcacc7b8>\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "dictionary changed size during iteration",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-7d74fea4121e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mget_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-467b27804989>\u001b[0m in \u001b[0;36mget_features\u001b[0;34m(namespace)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnamespace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnamespace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misclass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0missubclass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFeature\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misabstract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: dictionary changed size during iteration"
-     ]
-    }
-   ],
-   "source": [
-    "for f in get_features(globals()):\n",
-    "    print(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "dictionary changed size during iteration",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-ca65ae677437>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misclass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0missubclass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFeature\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misabstract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: dictionary changed size during iteration"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "for k, v in globals().items():\n",
-    "    if inspect.isclass(v) and issubclass(v, Feature) and not inspect.isabstract(v):\n",
-    "        print(v())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
